--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,9 @@ body {
 }
 /* Devices under 992px (lg) */
 @media (max-width: 992px) {
-  
+  .caption{
+    top:30%
+  }
 }
 /* Devices under 768px (md) */
 @media (max-width: 768px) {
